<resources>

    <string name="app_name">Smart Alarm Free</string>
    <string name="clock_text">Alarm mode</string>
    <string name="timer_text">Timer mode</string>
    <string name="settings_activity_data_category">Data usage</string>
    <string name="settings_activity_data_summary">Allow use mobile data to refresh weather</string>
    <string name="settings_activity_data_title">Mobile data</string>
    <string name="settings_activity_locale_category">Locale settings</string>
    <string name="settings_activity_measurements_title">Units</string>
    <string name="settings_activity_measurements_summary">Measurement units</string>
    <string name="settings_activity_language_title">Language</string>

    <string-array name="syncFrequency">
        <item name="2">Off</item>
        <item name="7">2 hours</item>
        <item name="3">6 hours</item>
        <item name="0">12 hours</item>
        <item name="1">Once a day</item>
    </string-array>
    <string-array name="syncFrequencyValues">
        <item name="2">0</item>
        <item name="7">2</item>
        <item name="30">6</item>
        <item name="0">12</item>
        <item name="1">24</item>
    </string-array>
    <string-array name="language">
        <item name="0">English</item>
    </string-array>
    <!-- 
        <item name="1">Deutsch</item>
        <item name="2">Slovak</item>
     -->
    <string-array name="language_values">
        <item name="0">EN</item>
    </string-array>
    <!-- 
        <item name="1">DE</item>
        <item name="2">SK</item>
     -->
    <string-array name="measurements">
        <item name="0">Metric</item>
        <item name="1">Imperial</item>
    </string-array>
    <string-array name="measurements_values">
        <item name="0">M</item>
        <item name="1">I</item>
    </string-array>

</resources>