<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/black" >

    <PreferenceCategory
        android:key="data_settings"
        android:title="@string/settings_activity_data_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="allow_mobile"
            android:summary="@string/settings_activity_data_summary"
            android:title="@string/settings_activity_data_title" />

        <ListPreference
            android:dialogTitle="Automatic refresh interval"
            android:entries="@array/syncFrequency"
            android:entryValues="@array/syncFrequencyValues"
            android:key="automatic_refresh"
            android:title="Automatic refresh"
            android:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="data_locale"
        android:title="@string/settings_activity_locale_category" >
        
        <ListPreference
            android:dialogTitle="Measurements"
            android:entries="@array/measurements"
            android:entryValues="@array/measurements_values"
            android:key="measurements"
            android:title="@string/settings_activity_measurements_title"
            android:summary="@string/settings_activity_measurements_summary"
            android:defaultValue="M" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="app_setting"
        android:title="About">
        
        <Preference android:title="Buy a pro version"
                android:key="button_buy"
                android:summary="Support developer and buy version without adverts"/>        
        
    </PreferenceCategory>
    
    <!--        <ListPreference
            android:dialogTitle="Language"
            android:entries="@array/language"
            android:entryValues="@array/language_values"
            android:key="language"
            android:title="@string/settings_activity_language_title"
            android:defaultValue="EN" /> -->


</PreferenceScreen>